<resources>
    <string name="app_name">Angebote</string>

    <string name="main_header">Suchen Sie nach Angeboten.</string>
    <string name="main_hint">Suchbegriff eingeben</string>
    <string name="main_button">Suchen</string>
    <string name="main_market_hint">EDEKA</string>

    <string name="select_market_header">Wählen Sie Ihre Edeka-Filiale aus.</string>
    <string name="select_market_hint">Ort eingeben</string>
    <string name="select_market_button">Suchen</string>

    <string name="set_notification_header">Stellen Sie Ihre Benachrichtigungen ein.</string>
    <string name="set_notification_explanation">Wenn eines der von Ihnen genannten Produkte in
        einem Ihrer Lieblingssupermärkten im Angebot ist, erhalten Sie automatisch eine
        Benachrichtigung von uns.</string>
    <string name="set_notification_hint">Produkt eingeben</string>
    <string name="set_notification_button">+</string>

    <string name="popup_sample_title">Titel</string>
    <string name="popup_sample_description">Test Pop-Up</string>

    <string name="market_list_sample">EDEKA</string>

    <string name="offer_list_sample_title">Kinder schokolade oder Yogurette</string>
    <string name="offer_list_sample_description">Die ideale Zwischenmahlzeit</string>
    <string name="offer_list_sample_price">1,99€</string>

    <string name="product_list_sample">Nudeln</string>
    <string name="product_list_delete">X</string>

    <string name="menu_set_notification">Benachrichtigungen einstellen</string>

    <string name="image_description">Product Image</string>
    <string name="image_star">Fav Star</string>

</resources>
