<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="15dp"
    android:background="@color/colorDivider"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/set_notification_header"
        android:textSize="@dimen/default_font_size"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_notification_explanation"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/product_add_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_toLeftOf="@id/product_add_button"
            android:hint="@string/set_notification_hint"
            android:textSize="@dimen/default_font_size" />

        <Button
            android:id="@+id/product_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_alignParentRight="true"
            android:text="@string/set_notification_button"
            android:textSize="@dimen/default_font_size" />

    </RelativeLayout>

    <ListView
        android:id="@+id/product_notification_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:divider="@color/colorDivider"
        android:dividerHeight="@dimen/default_margin" />



</LinearLayout>