<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_popup"
    >

    <ImageView
        android:id="@+id/popup_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_popup"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:text="@string/popup_sample_title"
        android:textSize="@dimen/font_size_default"
        android:textStyle="bold"

        android:layout_margin="@dimen/margin_popup"
        />

    <TextView
        android:id="@+id/popup_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"

        android:text="@string/popup_sample_description"
        android:textSize="@dimen/font_size_default"

        android:layout_marginHorizontal="@dimen/margin_popup"
        android:layout_marginBottom="@dimen/margin_popup"
         />

</LinearLayout>